--- a/RestaurantManagerSystem/RestaurantManagerSystem.csproj
+++ b/RestaurantManagerSystem/RestaurantManagerSystem.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -118,6 +119,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResManagerDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResManagerDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="GUI\DangNhap.resx">
       <SubType>Designer</SubType>
       <DependentUpon>DangNhap.cs</DependentUpon>
@@ -168,6 +174,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -201,6 +208,17 @@
       <DependentUpon>RptThongKeTheoThangNam.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <None Include="ResManagerDataSet.xsc">
+      <DependentUpon>ResManagerDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="ResManagerDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ResManagerDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="ResManagerDataSet.xss">
+      <DependentUpon>ResManagerDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{967B4E0D-AD0C-4609-AB67-0FA40C0206D8}" />
